--- a/troopguide.html
+++ b/troopguide.html
@@ -114,6 +114,7 @@
         <hr>
 
         <h2>3. Numbers & Ratios (For RP Balance)</h2>
+        <blockquote>As with the Economy Guide, these numbers are suggestions and not the rule.</blockquote>
         <table>
           <tr><th>Army Type</th><th>Knights</th><th>Men-at-Arms</th><th>Archers / Crossbows</th><th>Footmen</th><th>Levies</th></tr>
           <tr><td>Small Retinue (20–50 men)</td><td>1–2</td><td>6–12</td><td>10–15</td><td>10–20</td><td>–</td></tr>
@@ -134,19 +135,7 @@
 
         <hr>
 
-        <h2>5. Weapons & Armor by Tier</h2>
-        <table>
-          <tr><th>Tier</th><th>Typical Weapons</th><th>Typical Armor</th></tr>
-          <tr><td>I – Nobility</td><td>Lance, longsword, dagger</td><td>Full plate, surcoat, crested helm</td></tr>
-          <tr><td>II – Professionals</td><td>Poleaxe, arming sword, warhammer</td><td>Half-plate or brigandine, bascinet, mail sleeves</td></tr>
-          <tr><td>III – Skilled Commoners</td><td>Longbow, crossbow, short sword</td><td>Gambeson, jack chains, kettle helm</td></tr>
-          <tr><td>IV – Militia</td><td>Spear, billhook, club</td><td>Padded jack, leather cap, small shield</td></tr>
-          <tr><td>V – Peasantry</td><td>Pitchfork, flail, staff</td><td>Cloth or thick tunic, occasional helmet</td></tr>
-        </table>
-
-        <hr>
-
-        <h2>6. Pay & Maintenance</h2>
+        <h2>5. Pay & Maintenance</h2>
         <table>
           <tr><th>Rank</th><th>Typical Pay</th><th>Comparison to Economy Guide</th></tr>
           <tr><td>Knight</td><td>1–2 gold / month</td><td>Equivalent to a major noble’s stipend</td></tr>
@@ -176,3 +165,4 @@
   </footer>
 </body>
 </html>
+
