--- a/warguide.html
+++ b/warguide.html
@@ -31,7 +31,7 @@
           <span class="flourish-line-left"></span>
           <span class="flourish-box"></span>
         </div>
-        <h1>A FIELD GUIDE TO LOW-FANTASY WARFARE</h1>
+        <h1>A GUIDE TO LOW-FANTASY WARFARE</h1>
         <div class="flourish-right">
           <span class="flourish-box"></span>
           <span class="flourish-line-right"></span>
@@ -270,3 +270,4 @@
 
 </body>
 </html>
+
