--- a/troopguide.html
+++ b/troopguide.html
@@ -148,6 +148,175 @@
 
         <hr>
 
+        <h2>6. Historical Parallels: Real Noble Retinues (1300–1450)</h2>
+
+        <p>
+        To help gauge realistic troop numbers for noble houses, here are examples of actual medieval lords and their recorded musters.
+        </p>
+
+        <div class="heraldic-header">
+            <img src="images/fastolf.svg">
+            <h3>Sir John Fastolf of Caister (England, c. 1430)</h3>
+        </div>
+        <blockquote>The archetype of a professional late-medieval retainer lord.</blockquote>
+        <ul>
+            <li>
+                <b>Status:</b> Wealthy knight and veteran of the Hundred Years’ War.
+            </li>
+            <li>
+                <b>Lands:</b> Several manors in Norfolk.
+            </li>
+            <li>
+                <b>Standing Retinue:</b> ~20–25 men-at-arms, 80–100 archers in permanent pay.
+            </li>
+            <li>
+                <b>Full Muster:</b> Could raise ~200 when calling all household retainers and tenants.
+            </li>
+            <li>
+                <b>Notes:</b> Famous for his detailed “indentures of service.” His household was closer to a baronial retinue.
+            </li>
+        </ul>
+        <div class="heraldic-header">
+            <img src="images/talbot.svg">
+            <h3>Baron Talbot (Shrewsbury, 1417)</h3>
+        </div>
+        <blockquote>Fought under Henry V during the French campaigns.</blockquote>
+        <ul>
+            <li>
+                <b>Status:</b> English baron commanding under royal banner.
+            </li>
+            <li>
+                <b>Muster Roll at Caen (1417):</b> 6 knights, 44 men-at-arms, 120 archers.
+            </li>
+            <li>
+                <b>Total:</b> ~170 troops.
+            </li>
+            <li>
+                <b>Notes:</b> Entirely personal retinue, not including allies or levies.
+            </li>
+        </ul>
+        <div class="heraldic-header">
+            <img src="images/valois.svg">
+            <h3>Duke of Burgundy (Philip the Good, 1440s)</h3>
+        </div>
+        <blockquote>One of the strongest feudal hosts of the 15th century.</blockquote>
+        <ul>
+            <li>
+                <b>Permanent Standing Force (“Compagnies d’Ordonnance”):</b> 1,200 men-at-arms, 600 mounted archers, 1,000 foot archers — ~3,000 total.
+            </li>
+            <li>
+                <b>Levy Capacity:</b> Could raise 15,000–20,000 including vassals and hired men.
+            </li>
+            <li>
+                <b>Wealth:</b> Comparable to a small kingdom.
+            </li>
+        </ul>
+        <div class="heraldic-header">
+            <img src="images/erpingham.svg">
+            <h3>Sir Thomas Erpingham (Agincourt, 1415)</h3>
+        </div>
+        <blockquote>Commander of the English archers at Agincourt.</blockquote>
+        <ul>
+            <li>
+                <b>Household Strength:</b> ~80–100 men (mostly archers).
+            </li>
+            <li>
+                <b>Role:</b> Retinue captain and field commander for royal service.
+            </li>
+            <li>
+                <b>Notes:</b> Represents the well-connected knightly household with professional retainers.
+            </li>
+        </ul>
+        <div class="heraldic-header">
+            <img src="images/clifford.svg">
+            <h3>Lord de Clifford (England, 1380s)</h3>
+        </div>
+        <blockquote>A Marcher Lord defending the Scottish border.</blockquote>
+        <ul>
+            <li>
+                <b>Border Muster (Wardrobe Accounts):</b> 5 knights, 47 men-at-arms, 128 archers.
+            </li>
+            <li>
+                <b>Total:</b> ~180 men.
+            </li>
+            <li>
+                <b>Notes:</b> A defensive regional lord with castle garrisons and rotating levies.
+            </li>
+        </ul>
+        <div class="heraldic-header">
+            <img src="images/mauley.svg">
+            <h3>Minor Manor Example</h3>
+        </div>
+        <blockquote>Average gentry or landed knight.</blockquote>
+        <ul>
+            <li>
+                <b>Typical muster:</b> 1–2 men-at-arms (family + squire), 3–5 archers or servants-at-arms.
+            </li>
+            <li>
+                <b>Total:</b> 5–10 men.
+            </li>
+            <li>
+                <b>Notes:</b> Many “houses” in RP are actually this size. These lords serve as vassals to larger counts or barons.
+            </li>
+        </ul>
+        <hr>
+        <table>
+        <tr>
+            <th>Rank / Title</th>
+            <th>Historical Example</th>
+            <th>Typical Personal Force</th>
+            <th>Notes</th>
+        </tr>
+        <tr>
+            <td>Minor Knight / Manor Lord</td>
+            <td><b>Sir Thomas Erpingham</b> (Agincourt, 1415)</td>
+            <td>5–20 men (mostly archers and squires)</td>
+            <td>Represents a small landed house or vassal family. Perfect scale for knightly RP.</td>
+        </tr>
+        <tr>
+            <td>Baron / March Lord</td>
+            <td><b>Lord Clifford</b> (1380s) / <b>Baron Talbot</b> (1417)</td>
+            <td>150–200 men</td>
+            <td>Typical of a powerful local lord or frontier warden. Includes household and retainers.</td>
+        </tr>
+        <tr>
+            <td>Count / Earl</td>
+            <td><b>Sir John Fastolf</b> (1430) / <b>Diviš Bořek of Miletínek</b> (Hussite Wars)</td>
+            <td>200–400 professionals, 400–800 with vassals</td>
+            <td>Comparable to a Warcraft count or regional noble — wealthy, with multiple estates.</td>
+        </tr>
+        <tr>
+            <td>Duke / High Lord</td>
+            <td><b>Philip the Good of Burgundy</b> (1440s)</td>
+            <td>600–3000 standing troops, 15,000+ in full muster</td>
+            <td>Represents the scale of a major royal power or alliance banner host.</td>
+        </tr>
+        <tr>
+            <td>King / Coalition</td>
+            <td><b>Henry V of England</b> / <b>Sigismund of Luxembourg</b></td>
+            <td>5000–15,000 men</td>
+            <td>Massive, multi-banner forces — national or crusade-scale campaigns.</td>
+        </tr>
+        </table>
+
+        <h3>Interpretation for RP</h3>
+        <ul>
+        <li><b>Personal Retinue:</b> Even great lords rarely had more than 200–300 men permanently in pay.</li>
+        <li><b>Feudal Muster:</b> Counts and dukes could call up 1000–2000 by summoning vassals and town militias.</li>
+        <li><b>Temporary Nature:</b> Once a campaign ended, levies and vassal troops returned home.</li>
+        <li><b>Command Hierarchy:</b> Each vassal led his own contingent under the count’s banner, forming the full host.</li>
+        </ul>
+
+        <div class="note">
+        <p><b>Example — The Davenmoore Host (RP):</b> Count William Davenmoore could command roughly 150–200 professional retainers and knights, but when his vassal houses answer the call, his host swells to nearly 1000 men. This mirrors the structure of a 15th-century comital army and fits perfectly within historical ratios.</p>
+        </div>
+
+        <p>
+        In short, a thousand men is the strength of a powerful but not royal house — a realistic upper limit for any count or regional lord in a low-fantasy setting.
+        </p>
+
+        <hr>
+
         <blockquote>“A lord’s strength lies not in numbers, but in the quality of the few who stand when others flee.”</blockquote>
 
       </article>
@@ -165,4 +334,5 @@
   </footer>
 </body>
 </html>
+
 
