--- a/troopguide.html
+++ b/troopguide.html
@@ -229,7 +229,7 @@
         </ul>
         <div class="heraldic-header">
             <img src="images/clifford.svg">
-            <h3>Lord de Clifford (England, 1380s)</h3>
+            <h3>Lord de Clifford (England, 1380)</h3>
         </div>
         <blockquote>A Marcher Lord defending the Scottish border.</blockquote>
         <ul>
@@ -334,5 +334,6 @@
   </footer>
 </body>
 </html>
+
 
 
