--- a/troopguide.html
+++ b/troopguide.html
@@ -308,7 +308,7 @@
         </ul>
 
         <div class="note">
-        <p><b>Example — The Davenmoore Host (RP):</b> Count William Davenmoore could command roughly 150–200 professional retainers and knights, but when his vassal houses answer the call, his host swells to nearly 1000 men. This mirrors the structure of a 15th-century comital army and fits perfectly within historical ratios.</p>
+        <p><b>Example — Aldenwall:</b> Count William Davenmoore could command roughly 150–200 professional retainers and knights, but when his vassal houses answer the call, his host swells to nearly 1000 men. This mirrors the structure of a 15th-century comital army and fits perfectly within historical ratios.</p>
         </div>
 
         <p>
@@ -334,6 +334,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
