--- a/troopguide.html
+++ b/troopguide.html
@@ -319,6 +319,14 @@
 
         <blockquote>“A lord’s strength lies not in numbers, but in the quality of the few who stand when others flee.”</blockquote>
 
+        <h2>Sources & Further Reading</h2>
+        <ul class="source-list">
+            <li>Anne Curry, <i>Agincourt: A New History</i> (Tempus, 2005)</li>
+            <li>T. F. Tout, <i>Chapters in the Administrative History of Medieval England</i> (Manchester UP, 1933)</li>
+            <li>Richard Vaughan, <i>Philip the Good</i> (Boydell, 2002)</li>
+            <li><i>Armorial de Gelre</i> (KB 128 E 39, Royal Library The Hague)</li>
+            <li><a href="https://wappenwiki.org" target="_blank">WappenWiki.org</a> – digital armorial references for SVG heraldry</li>
+        </ul>      
       </article>
     </section>
 
@@ -334,6 +342,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
