--- a/troopguide.html
+++ b/troopguide.html
@@ -319,14 +319,15 @@
 
         <blockquote>“A lord’s strength lies not in numbers, but in the quality of the few who stand when others flee.”</blockquote>
 
+        <hr>
         <h2>Sources & Further Reading</h2>
         <ul class="source-list">
             <li>Anne Curry, <i>Agincourt: A New History</i> (Tempus, 2005)</li>
             <li>T. F. Tout, <i>Chapters in the Administrative History of Medieval England</i> (Manchester UP, 1933)</li>
+            <li>Ian Heath, <i>Armies of Feudal Europe 1066–1300</i></li>
+            <li>Osprey Men-At-Arms Series (Big Recommendation)</li>
             <li>Richard Vaughan, <i>Philip the Good</i> (Boydell, 2002)</li>
-            <li><i>Armorial de Gelre</i> (KB 128 E 39, Royal Library The Hague)</li>
-            <li><a href="https://wappenwiki.org" target="_blank">WappenWiki.org</a> – digital armorial references for SVG heraldry</li>
-        </ul>      
+        </ul>   
       </article>
     </section>
 
@@ -342,6 +343,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
