--- a/troopguide.html
+++ b/troopguide.html
@@ -53,7 +53,7 @@
 
         <hr>
 
-        <h2>1. Hierarchy at a Glance</h2>
+        <h2>Hierarchy at a Glance</h2>
         <table>
           <tr><th>Tier</th><th>Type</th><th>Who They Are</th><th>Equipment / Training</th><th>Where You’d Find Them</th></tr>
           <tr><td>I</td><td>Nobility (Knights & Lords)</td><td>Landed nobles sworn to the realm; command men-at-arms.</td><td>Full plate or brigandine over mail; expert in mounted & foot combat.</td><td>Commanders, vassals, elite guards.</td></tr>
@@ -65,7 +65,7 @@
 
         <hr>
 
-        <h2>2. Key Definitions</h2>
+        <h2>Key Definitions</h2>
 
         <h3>Knights</h3>
         <ul>
@@ -113,7 +113,7 @@
 
         <hr>
 
-        <h2>3. Numbers & Ratios (For RP Balance)</h2>
+        <h2>Numbers & Ratios (For RP Balance)</h2>
         <blockquote>As with the Economy Guide, these numbers are suggestions and not the rule.</blockquote>
         <table>
           <tr><th>Army Type</th><th>Knights</th><th>Men-at-Arms</th><th>Archers / Crossbows</th><th>Footmen</th><th>Levies</th></tr>
@@ -125,7 +125,7 @@
 
         <hr>
 
-        <h2>4. Common Mistakes in RP</h2>
+        <h2>Common Mistakes in RP</h2>
         <ul>
           <li>❌ <b>Too many knights.</b> Knighthood was rare and symbolic.</li>
           <li>❌ <b>Over-armored peasants.</b> Mail and plate were costly; commoners wore padded jacks.</li>
@@ -135,7 +135,7 @@
 
         <hr>
 
-        <h2>5. Pay & Maintenance</h2>
+        <h2>Pay & Maintenance</h2>
         <table>
           <tr><th>Rank</th><th>Typical Pay</th><th>Comparison to Economy Guide</th></tr>
           <tr><td>Knight</td><td>1–2 gold / month</td><td>Equivalent to a major noble’s stipend</td></tr>
@@ -148,7 +148,7 @@
 
         <hr>
 
-        <h2>6. Historical Parallels: Real Noble Retinues (1300–1450)</h2>
+        <h2>Historical Parallels: Real Noble Retinues (1300–1450)</h2>
 
         <p>
         To help gauge realistic troop numbers for noble houses, here are examples of actual medieval lords and their recorded musters.
@@ -343,6 +343,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
