--- a/troopguide.html
+++ b/troopguide.html
@@ -197,7 +197,7 @@
         </ul>
         <div class="heraldic-header">
             <img src="images/valois.svg">
-            <h3>Duke of Burgundy (Philip the Good, 1440s)</h3>
+            <h3>Duke of Burgundy (Philip the Good, 1440)</h3>
         </div>
         <blockquote>One of the strongest feudal hosts of the 15th century.</blockquote>
         <ul>
@@ -343,6 +343,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
