--- a/troopguide.html
+++ b/troopguide.html
@@ -269,7 +269,7 @@
         </tr>
         <tr>
             <td>Minor Knight / Manor Lord</td>
-            <td><b>Sir Thomas Erpingham</b> (Agincourt, 1415)</td>
+            <td><b>Generic Knightly Household</b> (14th c.)</td>
             <td>5–20 men (mostly archers and squires)</td>
             <td>Represents a small landed house or vassal family. Perfect scale for knightly RP.</td>
         </tr>
@@ -343,6 +343,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
