--- a/chronicles.html
+++ b/chronicles.html
@@ -62,6 +62,7 @@
           <a href="#folio4">Folio IV</a>
           <a href="#folio5">Folio V</a>
           <a href="#folio6">Folio VI</a>
+          <a href="#folio7">Folio VII</a>
           <a href="#glossary">Glossarium Chronicæ</a>
         </div>
         <button class="folio-toggle" aria-label="Toggle folio menu">▼</button>
@@ -419,6 +420,86 @@
         <div class="folio-footer">
         </div>
       </article>
+      <article id="folio7" class="folio-entry">
+        <h3>◇ Folio VII — The Road to Jihlava</h3>
+        <div class="folio-meta">
+          <p><i>From the writings of Brother Jan of Vyšehrad, autumn 1403</i></p>
+        </div>
+        <div class="folio-text">
+          <p>The mist held until mid-morning. The road climbed from the river in long wet bends, the fields shining like beaten pewter beneath the low sun. We walked in silence. Izolda went ahead again, barefoot, her hair damp against her neck. Each step left a faint print that filled at once with water, as if the earth itself wished to swallow her passing.</p>
+
+          <p>Near noon we came upon the wreck of a cart by the ditch. The wheel had splintered; the boards were half-burned. A psalter lay open in the mud, its script half-washed away. Among the pages I found a scallop shell, blackened at the edges, a red cross still faint upon its face. I turned it in my hand. A pilgrim’s token of Saint James, worn by those who had seen the world’s western edge.</p>
+
+          <p>I have seen such before — on the cloak of a German knight I met before the battle at Nicopolis. He said he had walked to Compostela once, in a year when the seas were calm. The shell, he told me, marked a road that ends in forgiveness.</p>
+
+          <p>I set it back among the ashes, yet Izolda took it up and fastened it at her throat, just where the rope-mark lies. She said nothing. Nor did I. The shell suited her better than gold might have. She smiled once, faintly, as if some private grace had been returned to her.</p>
+
+          <p>The rest of the day passed under a low sky. Marek said we would reach Třebíč by dusk, if the bridges still stood. The road narrowed between pale fields, and the smell of hearth smoke carried on the wind. By the time we saw the first roofs, the light was already thinning.</p>
+
+          <p>The stones of the causeway made the going slow. My leg ached with the old wound, and when Izolda began to limp on the gravel, Marek swore under his breath and said he’d had enough of <i>“holy feet on sharp road.”</i></p>
+
+          <p>The town lay quiet beneath its church tower, the river sluggish beneath the bridge. At a stall near the gate, Marek stopped to trade. He laid down his whetstone and a broken buckle, and in return took a pair of small leather boots — rough, but sound. She sat on a barrel while he knelt, taking her feet one by one. His hands moved quickly, more like a man fitting tack than clothing, yet he was careful not to scrape the skin.</p>
+
+          <p><i>“They’re too large,”</i> she said.</p>
+
+          <p><i>“Then fill them with faith,”</i> he answered.</p>
+
+          <p>She smiled faintly, the sound that followed almost laughter. It warmed the air between us more than any fire since Rosice.</p>
+
+          <p>We did not linger. By sundown the roofs of Třebíč lay behind us, their bells calling vespers over the river. We walked until the fields gave way to wood, and there made camp in a hollow among birch and willow.</p>
+
+          <p>The fire smoked; the wood was green. Marek spoke of campaigns past, of garrisons lost and banners forgotten. He said he had once seen the Danube gleam like steel before a storm. <i>“Every river looks holy before a slaughter,”</i> he added, then spat into the fire. Izolda listened as if to a sermon, her hands folded around the dagger at her belt.</p>
+
+          <p>After a while she looked to me. <i>“You said you fought by the Danube once,”</i> she asked, her voice barely above the crackle. <i>“What went wrong there?”</i></p>
+
+          <p><i>“Pride,”</i> I said. <i>“The French would not wait. Sigismund told them to hold until the Turks spent their arrows, but they charged instead. They wanted glory, not victory.”</i></p>
+
+          <p><i>“And found neither,”</i> Marek said.</p>
+
+          <p><i>“No,”</i> I said. <i>“Only graves. The Danube ran red for two days.”</i></p>
+
+          <p>I remember them—bright as saints in their banners, laughing as if God owed them triumph. They rode past our lines shouting that Hungarians fought like peasants, mocking the king himself. And when the arrows came, they broke like glass. I saw one knight spurring his horse through mud so thick it swallowed the beast to the knees, still waving his standard as if the sky might mistake it for courage. When they met the Turks, the knights fought valiantly, displaying their prowess, yet their pride — and the Turks — swallowed them.</p>
+
+          <p>Izolda’s gaze did not leave the flame. <i>“Do you think God sent you home to write of it?”</i></p>
+
+          <p>I had not thought of it before. <i>“If He did,”</i> I said, <i>“I cannot see the purpose. Men forget too quickly, and I doubt God keeps record of what He chooses to ignore.”</i></p>
+
+          <p>She was silent for a time, then asked, <i>“When you write, do you ever think it will be read?”</i></p>
+
+          <p><i>“Once, I thought God read it.”</i></p>
+
+          <p><i>“And now?”</i></p>
+
+          <p><i>“Now I write because the noise won’t let me sleep. The road ends each night, but the thoughts keep walking. If I do not set them down, they will walk over me.”</i></p>
+
+          <p>She seemed to weigh that answer. The firelight flickered over the shell at her throat; its dull gleam looked almost like water.</p>
+
+          <p><i>“Then you write the way others drink,”</i> she said at last. <i>“To quiet what won’t be quieted.”</i></p>
+
+          <p>Marek snorted. <i>“And waste better wine for it.”</i> He tossed a twig into the coals. <i>“I can’t write a word, but the road still keeps me awake. Maybe that’s why I talk so much.”</i></p>
+
+          <p><i>“You don’t,”</i> she said.</p>
+
+          <p><i>“Then I think too loudly.”</i></p>
+
+          <p>She smiled, small and tired, and looked back to the flame.</p>
+
+          <p>After a while she began to hum — the same low tune I had heard once before by the fire. Marek was mending a strap on his gauntlet, his fingers slow with weariness. The sound seemed to smooth the air around us; even the wood stopped crackling for a moment, as if listening.</p>
+
+          <p>His head dipped once, twice, then settled against his pack. The awl slipped from his grasp. Izolda rose, quiet as smoke, and went to him. She eased the strap from his hands and set it aside so he would not cut himself in his sleep. Then she turned toward me.</p>
+
+          <p>She came to my side and slipped beneath my cloak. For a time she lay still, her breath shallow, eyes open to the dying fire. The humming faded little by little until there was only the sound of the wind through the birch. At last her hand lifted toward her ear, clutching the shell as though it whispered to her. I thought she might wake and speak, but she only breathed, steady and slow, as if listening for the sea. The shell lay against her palm like a coin for passage. I wondered what shore it might buy.</p>
+
+          <p>The quill rasped softly against the page. Once, I thought her eyes were closed, but the fire caught them for an instant — open, watching the ink. Perhaps I imagined it. When I looked again, she slept.</p>
+
+          <p>It strikes me now that we never asked where she was from. In other days, a stranger’s tongue would have told us all we wished to know — her prayers, her loyalties, her price. But these roads have stripped such questions from us. What use in asking the rain which cloud it fell from?</p>
+
+          <p>Perhaps that is mercy — to walk beside one another and not demand a story. Or perhaps it is only weariness. I cannot tell the difference anymore.</p>
+
+        </div>
+        <div class="folio-footer">
+        </div>
+      </article>
      <article id="glossary" class="folio-entry">
         <h3>◇ Glossarium Chronicæ</h3>
         <div class="folio-meta">
@@ -621,3 +702,4 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
